Test/git-issues/git-issue-3187b.dfy.expect
git-issue-3187b.dfy(6,13): Error: a field requires a type declaration and may not be initialized
git-issue-3187b.dfy(6,13): Error: rbrace expected
2 parse errors detected in git-issue-3187b.dfy
